--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
+    "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-sizes": "^2.0.4",
     "react-native-safe-area-context": "4.10.5",
