--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.25",
+    "expo": "~51.0.26",
     "expo-calendar": "~13.0.5",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-contacts": "~13.0.5",
     "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.21",
+    "expo-dev-client": "~4.0.22",
     "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.12.13",
@@ -49,6 +49,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.3.0",
@@ -58,6 +59,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "zod": "^3.23.8"
