--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.4",
     "expo": "~51.0.26",
     "expo-calendar": "~13.0.5",
     "expo-clipboard": "~6.0.3",
