--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-input-select": "^1.3.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
